{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 1021,
  "lineage": "4819644c-f4af-71ee-9a0a-621cb0a2c470",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_public_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:333972965329:internet-gateway/igw-0f600fde0e4f1536d",
            "id": "igw-0f600fde0e4f1536d",
            "owner_id": "333972965329",
            "tags": {
              "Environment": "dev",
              "Name": "test-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test-igw"
            },
            "vpc_id": "vpc-03af94ffc489b0e9e"
          },
          "dependencies": [
            "aws_vpc.jhc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jhc_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:333972965329:loadbalancer/app/test-dev-alb/1e202fc4cea09c97",
            "arn_suffix": "app/test-dev-alb/1e202fc4cea09c97",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-dev-alb-970363189.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:333972965329:loadbalancer/app/test-dev-alb/1e202fc4cea09c97",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ecc601e1b8ab2636"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08f0796654d891ea6"
              },
              {
                "subnet_id": "subnet-0d9b82738fbc83de5"
              }
            ],
            "subnets": [
              "subnet-08f0796654d891ea6",
              "subnet-0d9b82738fbc83de5"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "test-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test-alb"
            },
            "vpc_id": "vpc-03af94ffc489b0e9e",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.jhc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jhc-ALB-Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:333972965329:listener/app/test-dev-alb/1e202fc4cea09c97/3d7f8cbc4fed225d",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:333972965329:certificate/d117d5f6-bdff-4198-9659-524d656fee8f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:333972965329:targetgroup/test-dev-tg/2784adecfa4d5e83",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:333972965329:listener/app/test-dev-alb/1e202fc4cea09c97/3d7f8cbc4fed225d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:333972965329:loadbalancer/app/test-dev-alb/1e202fc4cea09c97",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.jhc_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.jhc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:333972965329:targetgroup/test-dev-tg/2784adecfa4d5e83",
            "arn_suffix": "targetgroup/test-dev-tg/2784adecfa4d5e83",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:333972965329:targetgroup/test-dev-tg/2784adecfa4d5e83",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "test-dev-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "test-lb-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test-lb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03af94ffc489b0e9e"
          },
          "dependencies": [
            "aws_vpc.jhc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:333972965329:route-table/rtb-04408300ebc35941e",
            "id": "rtb-04408300ebc35941e",
            "owner_id": "333972965329",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f600fde0e4f1536d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_rt"
            },
            "tags_all": {
              "Name": "main_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03af94ffc489b0e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_public_gateway",
            "aws_vpc.jhc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0653a7a518a93faf6",
            "route_table_id": "rtb-04408300ebc35941e",
            "subnet_id": "subnet-0d9b82738fbc83de5"
          },
          "dependencies": [
            "aws_internet_gateway.main_public_gateway",
            "aws_route_table.main_rt",
            "aws_subnet.public",
            "aws_vpc.jhc_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4d3ac643eec0320",
            "route_table_id": "rtb-04408300ebc35941e",
            "subnet_id": "subnet-08f0796654d891ea6"
          },
          "dependencies": [
            "aws_internet_gateway.main_public_gateway",
            "aws_route_table.main_rt",
            "aws_subnet.public",
            "aws_vpc.jhc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:333972965329:security-group/sg-0774019076e6d129e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0774019076e6d129e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20230303033247310300000004",
            "name_prefix": "terraform-",
            "owner_id": "333972965329",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "test-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03af94ffc489b0e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jhc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:333972965329:security-group/sg-0ecc601e1b8ab2636",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecc601e1b8ab2636",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20230303033247305400000003",
            "name_prefix": "terraform-",
            "owner_id": "333972965329",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "test-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03af94ffc489b0e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jhc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:333972965329:subnet/subnet-0d9b82738fbc83de5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.18.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9b82738fbc83de5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "333972965329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "test-subnet-public-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test-subnet-public-1"
            },
            "vpc_id": "vpc-03af94ffc489b0e9e"
          },
          "dependencies": [
            "aws_vpc.jhc_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:333972965329:subnet/subnet-08f0796654d891ea6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "172.18.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f0796654d891ea6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "333972965329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "test-subnet-public-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test-subnet-public-2"
            },
            "vpc_id": "vpc-03af94ffc489b0e9e"
          },
          "dependencies": [
            "aws_vpc.jhc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jhc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:333972965329:vpc/vpc-03af94ffc489b0e9e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.0.0/16",
            "default_network_acl_id": "acl-0780f6af43b683efe",
            "default_route_table_id": "rtb-091d5bf217fddbee2",
            "default_security_group_id": "sg-0277c0ec521c8906c",
            "dhcp_options_id": "dopt-01e5ef22e75f0ebf8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03af94ffc489b0e9e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-091d5bf217fddbee2",
            "owner_id": "333972965329",
            "tags": {
              "Environment": "dev",
              "Name": "test-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}